--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           - command: fmt
             args: --all -- --check --color always
           - command: clippy
-            args: --all-features --workspace -- -D warnings
+            args: --all-features -- -D warnings
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -44,3 +44,4 @@ jobs:
         uses: Swatinem/rust-cache@v2
       - name: Run command
         run: cargo ${{ matrix.action.command }} ${{ matrix.action.args }}
+        working-directory: gateway-board
