--- a/gateway-board/Cargo.toml
+++ b/gateway-board/Cargo.toml
@@ -17,13 +17,16 @@ esp-backtrace = { version = "0.15.0", features = [
 ] }
 esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
 embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
-embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
+embassy-time = { version = "0.4.0" }
 embassy-sync = "0.6.2"
 embedded-hal-async = "1.0.0"
 embedded-io-async = "0.6.1"
 portable-atomic = "1.11.0"
 esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
 log = { version = "0.4.21" }
+ssd1306 = { version = "0.10.0", features = ["async"] }
+display-interface = "0.5.0"
+thiserror = { version = "2.0.12", default-features = false }
 
 [profile.dev]
 # Rust debug is too slow.
