--- a/gateway-board/.cargo/config.toml
+++ b/gateway-board/.cargo/config.toml
@@ -1,6 +1,9 @@
 [target.xtensa-esp32s3-none-elf]
 runner = "espflash flash --monitor"
 
+[target.xtensa-esp32-none-elf]
+runner = "espflash flash --monitor"
+
 [env]
 ESP_LOG = "INFO"
 
