--- a/gateway-board/Cargo.toml
+++ b/gateway-board/Cargo.toml
@@ -8,11 +8,24 @@ name = "gateway-board"
 path = "./src/bin/main.rs"
 
 [features]
-default = ["display-ssd1306"]
+default = ["board-heltec-lora32v3", "display-ssd1306"]
 
+board-esp32dev = [
+  "esp-backtrace/esp32",
+  "esp-hal/esp32",
+  "esp-hal-embassy/esp32",
+  "esp-println/esp32",
+]
+board-heltec-lora32v3 = [
+  "esp-backtrace/esp32s3",
+  "esp-hal/esp32s3",
+  "esp-hal-embassy/esp32s3",
+  "esp-println/esp32s3",
+]
 display-ssd1306 = ["display-interface", "ssd1306"]
 
 [dependencies]
+cfg-if = "1.0.0"
 display-interface = { version = "0.5.0", optional = true }
 embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
 embassy-sync = "0.6.2"
@@ -20,14 +33,13 @@ embassy-time = { version = "0.4.0" }
 embedded-hal-async = "1.0.0"
 embedded-io-async = "0.6.1"
 esp-backtrace = { version = "0.15.0", features = [
-  "esp32s3",
   "exception-handler",
   "panic-handler",
   "println",
 ] }
-esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "unstable"] }
-esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
-esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
+esp-hal = { version = "1.0.0-beta.0", features = ["unstable"] }
+esp-hal-embassy = { version = "0.7.0", features = [] }
+esp-println = { version = "0.13.0", features = ["log"] }
 log = { version = "0.4.21" }
 portable-atomic = "1.11.0"
 thiserror = { version = "2.0.12", default-features = false }
