--- a/gateway-board/Cargo.toml
+++ b/gateway-board/Cargo.toml
@@ -25,7 +25,14 @@ board-heltec-lora32v3 = [
   "esp-wifi/esp32s3",
 ]
 display-ssd1306 = ["display-interface", "ssd1306"]
-wifi = ["edge-dhcp", "edge-nal-embassy", "edge-nal", "embassy-net", "esp-wifi"]
+wifi = [
+  "edge-dhcp",
+  "edge-nal-embassy",
+  "edge-nal",
+  "embassy-net",
+  "esp-wifi",
+  "heapless",
+]
 
 [dependencies]
 cfg-if = "1.0.0"
@@ -34,7 +41,9 @@ edge-dhcp = { version = "0.5.0", optional = true }
 edge-nal-embassy = { version = "0.5.0", optional = true }
 edge-nal = { version = "0.5.0", optional = true }
 embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
+embassy-futures = { version = "0.1.1", features = ["log"] }
 embassy-net = { version = "0.6.0", optional = true, features = [
+  "dhcpv4",
   "log",
   "proto-ipv4",
   "tcp",
@@ -44,6 +53,7 @@ embassy-sync = "0.6.2"
 embassy-time = { version = "0.4.0" }
 embedded-hal-async = "1.0.0"
 embedded-io-async = "0.6.1"
+enumset = "1.1.5"
 esp-alloc = "0.7.0"
 esp-backtrace = { version = "0.15.0", features = [
   "exception-handler",
@@ -54,6 +64,7 @@ esp-hal = { version = "1.0.0-beta.0", features = ["unstable"] }
 esp-hal-embassy = { version = "0.7.0", features = [] }
 esp-println = { version = "0.13.0", features = ["log"] }
 esp-wifi = { version = "0.13.0", optional = true, features = ["log", "wifi"] }
+heapless = { version = "0.8.0", optional = true }
 log = { version = "0.4.21" }
 portable-atomic = "1.11.0"
 thiserror = { version = "2.0.12", default-features = false }
