--- a/sensor-board/.cargo/config.toml
+++ b/sensor-board/.cargo/config.toml
@@ -1,12 +1,13 @@
 [target.xtensa-esp32-none-elf]
-runner = "espflash flash --monitor"
+runner = "espflash flash --monitor --log-format defmt"
 
 [env]
-ESP_LOG="INFO"
+DEFMT_LOG = "info"
 
 [build]
 rustflags = [
   "-C", "link-arg=-nostartfiles",
+  "-C", "link-arg=-Tdefmt.x",
 ]
 
 target = "xtensa-esp32-none-elf"
