--- a/gateway-board/Cargo.toml
+++ b/gateway-board/Cargo.toml
@@ -70,6 +70,7 @@ esp-wifi = { version = "0.13.0", optional = true, features = ["defmt", "wifi"] }
 heapless = { version = "0.8.0", optional = true }
 lora-phy = { version = "3.0.1", optional = true }
 portable-atomic = "1.11.0"
+protocol = { path = "../protocol" }
 thiserror = { version = "2.0.12", default-features = false }
 ssd1306 = { version = "0.10.0", optional = true, features = ["async"] }
 static_cell = "2.1.0"
