feat(5): implement exemple usage of BMP280 pressure sensor

--- a/sensor-board/Cargo.toml
+++ b/sensor-board/Cargo.toml
@@ -36,7 +36,7 @@ lora-phy = { version = "3.0.1", optional = true }
 static_cell = "2.1.0"
 thiserror = { version = "2.0.12", default-features = false }
 dust_sensor_gp2y1014au = { path = "../drivers/dust_sensor_gp2y1014au" }
-
+bmp280-ehal = { git = "https://github.com/AndreasLrx/bmp280" }
 
 
 
