chore(35): add `protocol` to CI directories

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         directory:
           - gateway-board
           - sensor-board
+          - protocol
 
     steps:
       - name: Checkout repository
