--- a/gateway-board/.cargo/config.toml
+++ b/gateway-board/.cargo/config.toml
@@ -5,7 +5,7 @@ runner = "espflash flash --monitor --log-format defmt"
 runner = "espflash flash --monitor --log-format defmt"
 
 [env]
-DEFMT_LOG = "info"
+DEFMT_LOG = "info,gateway_board::net::tcp=trace"
 
 [build]
 rustflags = ["-C", "link-arg=-nostartfiles", "-C", "link-arg=-Tdefmt.x"]
