--- a/gateway-board/Cargo.toml
+++ b/gateway-board/Cargo.toml
@@ -34,6 +34,7 @@ wifi = [
   "esp-wifi",
   "heapless",
 ]
+tcp-debug = []
 
 [dependencies]
 cfg-if = "1.0.0"
@@ -48,6 +49,7 @@ embassy-futures = { version = "0.1.1", features = ["defmt"] }
 embassy-net = { version = "0.6.0", optional = true, features = [
   "dhcpv4",
   "defmt",
+  "dns",
   "proto-ipv4",
   "tcp",
   "medium-ethernet",
@@ -69,6 +71,7 @@ esp-println = { version = "0.13.0", features = ["defmt-espflash"] }
 esp-wifi = { version = "0.13.0", optional = true, features = ["defmt", "wifi"] }
 heapless = { version = "0.8.0", optional = true }
 lora-phy = { version = "3.0.1", optional = true }
+memchr = { version = "2.7.4" , default-features = false }
 portable-atomic = "1.11.0"
 protocol = { path = "../protocol" }
 thiserror = { version = "2.0.12", default-features = false }
