--- a/sensor-board/.cargo/config.toml
+++ b/sensor-board/.cargo/config.toml
@@ -2,7 +2,7 @@
 runner = "espflash flash --monitor --log-format defmt"
 
 [env]
-DEFMT_LOG = "info"
+DEFMT_LOG = "info,sensor_board::lora=trace,protocol::link::v1=trace"
 
 [build]
 rustflags = [
