--- a/sensor-board/Cargo.toml
+++ b/sensor-board/Cargo.toml
@@ -29,13 +29,14 @@ esp-backtrace = { version = "0.15.0", features = [
 esp-synopsys-usb-otg = { version = "0.4.2", features = ["fs", "esp32sx"] }
 embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
 embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-16384"] }
+embassy-futures = { version = "0.1.1", features = ["defmt"] }
 embassy-sync = "0.6.2"
 embassy-time = { version = "0.4.0", features = ["generic-queue-64"] }
 esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0",  features = ["esp32", "defmt", "unstable"] }
 esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0",  features = ["esp32"], package = "esp-hal-embassy" }
 esp-println = { version = "0.13.1", features = ["esp32", "defmt-espflash"] }
 lora-phy = { version = "3.0.1", optional = true }
-protocol = { path = "../protocol" }
+protocol = { path = "../protocol", features = ["defmt"] }
 static_cell = "2.1.0"
 thiserror = { version = "2.0.12", default-features = false }
 heapless = "0.8.0"
